add base project strucrture
